<resources>
    <string name="app_name">MoneyPit</string>
    <string name="action_settings">Settings</string>
    <string name="no_cars">It is very lonely in here. Please use the \'+\' button below to add a new vehicle.</string>
    <string name="no_fillups">It is very lonely in here. Please use the \'+\' button below to add a new fill-up or select another year using the menu above.</string>
    <string name="title_activity_add_or_edit_car">AddOrEditCarActivity</string>
    <string name="car_brand">Brand</string>
    <string name="carModel">Model</string>
    <string name="carBuildYear">Build year</string>
    <string name="carLicense">License plate</string>
    <string name="carCurrency">Currency</string>
    <string name="carDistanceUnit">Distance unit</string>
    <string name="buildyear_to_low">You have entered a year lower than 1672. That was the year the first ever steam car was built. Please enter a year higher than or equal to 1672.</string>
    <string name="buildyear_to_high">You have entered a year higher than the current year. Please enter a year lower than, or equal to the current year.</string>
    <string name="buildyear_error">You have entered an illegal value or no value at all. Please enter a year between 1672 and the current year.</string>
    <string name="no_text_error">This field may not be empty.</string>
    <string name="title_edit_car">Edit an existing vehicle</string>
    <string name="title_create_car">Create a new vehicle</string>
    <string name="error_saving_car">There was a problem saving the vehicle into the database.</string>
    <string name="error_saving_fillup">There was a problem saving the fill-up into the database.</string>
    <string name="carVolumeUnit">Volume unit</string>
    <string name="title_activity_main_drawer">MoneyPit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="estimate_odo">Estimate odometer</string>
    <string name="export_import_pictures">Export and import pictures</string>
    <string name="add_car">Add new vehicle</string>
    <string name="title_activity_activity_car_details">activity_car_details</string>
    <string name="title_activity_car_details">CarDetailsActivity</string>
    <string name="tab_fillups">Fill-ups</string>
    <string name="tab_cost">Cost</string>
    <string name="tab_mileage">Economy</string>
    <string name="tab_summary">Summary</string>
    <string name="nav_cars">Vehicles</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="longLiter">Liter</string>
    <string name="longImperialGallon">Imperial gallon</string>
    <string name="longGallon">Gallon</string>
    <string name="shortLiter">L</string>
    <string name="shortImperialGallon">gal</string>
    <string name="shortUSGallon">gal</string>
    <string name="longKilometer">Kilometer</string>
    <string name="longMile">Mile</string>
    <string name="shortKilometer">km</string>
    <string name="shortMile">mi</string>
    <string name="days">days</string>
    <string name="general_settings">General settings</string>
    <string name="estimate_odo_summary">When this option is turned on the odometer setting will be estimated when entering a new fill-up.</string>
    <string name="export_import_pictures_summary">When checked this will include the images when importing and exporting vehicles.</string>
    <string name="car_list_averages">Avg. %1$s, %2$s per fill-up.</string>
    <string name="car_list_average_price">Average fuel price: %1$s</string>
    <string name="car_list_average_volume">Average fill-up: %1$s</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_delete_car_title">Delete \'%1$s\'…</string>
    <string name="dialog_delete_car_content">This will delete the vehicle from the database including all of it\'s fill-up information.\n\n<b><i>This can not be undone!</i></b>\n\nAre you sure you want to continue?</string>
    <string name="dialog_delete_fillup_content">This will delete the fill-up from the database.\n\n<b><i>This can not be undone!</i></b>\n\nAre you sure you want to continue?</string>
    <string name="fillupOdometer">Odometer</string>
    <string name="fillupVolume">Volume</string>
    <string name="fillupPrice">Price</string>
    <string name="fillupFullTank">Full tank</string>
    <string name="fillupRemarks">Remarks</string>
    <string name="title_edit_fillup">Edit an existing fill-up</string>
    <string name="title_create_fillup">Create a new fill-up</string>
    <string name="title_activity_add_or_edit_fillup">AddOrEditFillup</string>
    <string name="nan">This is not a number.</string>
    <string name="odo_error">The odometer setting must be higher than the previous fill up and lower than the next fill up.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_select_year_title">Select year</string>
    <string name="dialog_select_year_body">Please select the year from which you wish to see the information.</string>
    <string name="dialog_select_year_hint">Year</string>
    <string name="action_select_year">Show year…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graph_fuel_cost">fuel cost per month</string>
    <string name="graph_fuel_cost_per_distance_unit">fuel cost per %1$s per month</string>
    <string name="graph_cost_legend">cost</string>
    <string name="graph_distance_legend">distance</string>
    <string name="graph_economy_legend">economy</string>
    <string name="graph_average">average</string>
    <string name="graph_distance">driven distance per month</string>
    <string name="graph_economy">average fuel economy per month</string>
    <string name="dialog_error_title">Error</string>
    <string name="license_error">There is already a vehicle in the database with this license plate. The license plate of a new vehicle must be unique.</string>
    <string name="no_data_to_average">There is no data to average.</string>
    <string name="graph_cost_per_month">fuel cost for %1$s %2$d:</string>
    <string name="graph_cost_per_distance_per_month">fuel costs per %1$s, per month for %2$s %3$d:</string>
    <string name="graph_distance_per_month">driven distance for %1$s %2$d:</string>
    <string name="graph_economy_per_month">average fuel economy for %1$s %2$d:</string>
    <string name="summary_totals">Totals:</string>
    <string name="summary_distance_total">distance:</string>
    <string name="summary_cost_total">fuel cost:</string>
    <string name="summary_volume_total">amount of fuel:</string>
    <string name="summary_averages">Averages:</string>
    <string name="summary_economy_average">fuel economy:</string>
    <string name="summary_cost_average">cost per month:</string>
    <string name="summary_cost_per">cost per</string>
    <string name="summary_summary">Summary:</string>
    <string name="summary_most_expensive_month">most expensive month:</string>
    <string name="summary_least_expensive_month">least expensive month:</string>
    <string name="summary_best_economy_fillup">best fuel economy:</string>
    <string name="summary_worst_economy_fillup">worst fuel economy:</string>
    <string name="summary_most_expensive_fillup">most expensive fill-up:</string>
    <string name="summary_least_expensive_fillup">least expensive fill-up:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About MoneyPit</string>
    <string name="version">version</string>
    <string name="error_map_image">Failed to download the map image.\nCheck you internet connection.</string>
    <string name="location_settings">Location and maps</string>
    <string name="allow_location">Allow recording of location</string>
    <string name="allow_location_summary">With this option turned on the location of every fill-up is recorded into the database.</string>
    <string name="transitions">Show animated transitions</string>
    <string name="transitions_summary">Shows nice animated transitions when navigating from one screen to another. Turn off this option on slower devices to increase performance or if you simply do not want to see the transitions.</string>
    <string name="no_location_provider">There is no location provider available. The location will not be recorded.</string>
    <string name="misc_settings">Miscellaneous</string>
    <string name="clear_map_cache">Erase the local map cache</string>
    <string name="clear_map_cache_summary">Remove all maps from the local map cache.</string>
    <string name="warning">Warning</string>
    <string name="empty_cache">Erasing the local map cache means that the next time a map is shown it needs to be downloaded from the internet again.\n\nContinue?</string>
    <string name="cache_purged">The local map cache has been erased.</string>
    <string name="cache_purge_failed">Failed to erase all information from the local map cache.</string>
    <string name="backup_error">Backing up the database failed!</string>
    <string name="restore_error">Restoring the database backup failed!</string>
    <string name="backup_ok">Successfully created a database backup!</string>
    <string name="restore_ok">Successfully restored the database backup!</string>
    <string name="drive_error_query_folders">Failed to query folders on Google Drive.</string>
    <string name="drive_error_root_folder">Failed to get the root folder from Google Drive.</string>
    <string name="drive_error_create_folder">Failed to create the backup folder om Google Drive.</string>
    <string name="drive_error_create_file">Failed to create the backup file of Google Drive.</string>
    <string name="drive_error_io_error">An error has occurred writing the backup file on Google Drive.</string>
    <string name="drive_error_backup_folder">Unable to find or create the backup folder on Google Drive.</string>
    <string name="drive_error_file_list">Failed to read the backup files.</string>
    <string name="drive_backup_success">The backup was created successfully on Google Drive.</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="backup">BACKUP</string>
    <string name="backup_summary">When you tap on the BACKUP button a copy of the current database is created on your Google Drive. It is possible you need to select the account first and logon.</string>
    <string name="restore">RESTORE</string>
    <string name="restore_summary">When you select an available backup from the list below and tap on the RESTORE button the selected backup will be restored. Note that this will overwrite your current database.</string>
    <string name="restore_warning">Restoring a backup will overwrite the current database. All information will be lost.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;&lt;i&gt;This can not be undone!&lt;/i&gt;&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Are you sure you want to continue?</string>
    <string name="restore_error_get_file">Unable to open the backup file.</string>
    <string name="drive_restore_success">The selected backup has been restored successfully.</string>
    <string name="upto">up to</string>
    <string name="navigate_to">Navigate to…</string>
    <string name="error_no_camera">This device does not have a camera.</string>
    <string name="error_save_picture">There was a problem saving the photo…</string>
    <string name="title_activity_totalsummary">Total vehicle summary</string>
    <string name="no_summary_data">No data to summarize or not enough data to summarize. At least 2 fill-ups must be present for the vehicle in the given time range to be able to summarize the information.</string>
</resources>