<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="estimate_odometer"
            android:title="@string/estimate_odo"
            android:summary="@string/estimate_odo_summary"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="export_import_pictures"
            android:title="@string/export_import_pictures"
            android:summary="@string/export_import_pictures_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/location_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="allow_location"
            android:title="@string/allow_location"
            android:summary="@string/allow_location_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc_settings">
        <Preference
            android:title="@string/clear_map_cache"
            android:summary="@string/clear_map_cache_summary"
            android:key="emptyMapCache" />
    </PreferenceCategory>
</PreferenceScreen>