<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.development.jaba.moneypit.AddOrEditFillupActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fillupDate"
                style="@style/DatePicker" />

            <CheckedTextView
                android:id="@+id/fillupFullTank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fillupFullTank"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="-12dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple" />

            <com.development.jaba.view.EditTextEx
                android:id="@+id/fillupOdo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fillupOdometer"
                android:inputType="numberDecimal"
                app:eteErrorColor="@color/errorColor"
                android:paddingBottom="8dp" />

            <com.development.jaba.view.EditTextEx
                android:id="@+id/fillupVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fillupVolume"
                android:inputType="numberDecimal"
                app:eteErrorColor="@color/errorColor"
                android:paddingBottom="8dp" />

            <com.development.jaba.view.EditTextEx
                android:id="@+id/fillupPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fillupPrice"
                android:inputType="numberDecimal"
                app:eteErrorColor="@color/errorColor"
                android:paddingBottom="8dp" />

            <com.development.jaba.view.EditTextEx
                android:inputType="textMultiLine"
                android:id="@+id/fillupRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="500"
                android:hint="@string/fillupRemarks"
                app:eteErrorColor="@color/errorColor"
                android:paddingBottom="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
